--- a/es6/template_string.html
+++ b/es6/template_string.html
@@ -129,6 +129,21 @@ let originUl = '<ul>\
 
 console.log(originString, originUl);
 
+let newString = `我叫做 ${people[0].name}`;
+let newUl = `
+  <ul>
+    <li>我叫做 ${people[0].name}</li>
+    <li>我叫做 ${people[1].name}</li>
+    <li>我叫做 ${people[2].name}</li>
+  </ul>
+`;
+newUl = `
+  <ul>
+    ${people.map(person => `<li>我叫做 ${person.name}</li>`).join('')};
+  </ul>
+`;
+console.log(newString, newUl);
+
 </script> 
         </div>
       </div>
