--- a/es6/spread_operator.html
+++ b/es6/spread_operator.html
@@ -105,38 +105,49 @@
 
 <script>
 // #1 使用展開語法，合併以下陣列
-let groupA = ['小明', '杰倫', '阿姨'];
-let groupB = ['老媽', '老爸'];
+// let groupA = ['小明', '杰倫', '阿姨'];
+// let groupB = ['老媽', '老爸'];
+// 傳統合併方式
+// let groupAll = groupA.concat(groupB);
+// let groupAll = [...groupA,...groupB];
+// console.log(...groupA);  // ...的意思就是把gourpA的值一個一個取出來return
+// console.log(groupAll);
 
 // #2 淺複製觀念說明 (shallow copy)
 // let groupA = ['小明', '杰倫', '阿姨'];
-// let groupB = groupA;
+// //let groupB = groupA;  //直接=的話會傳referrence，後面做push以後groupA也會受影響
+// let groupB = [...groupA];   //這樣會把值取出來但是不會影響到gorupA
 // groupB.push('阿明');
 // console.log(groupA); // 請問此時的 groupA 值為何
 
 
 // #3 類陣列觀念說明
 // let doms = document.querySelectorAll('li');
-// console.log(doms);
+// // console.log(doms.concat()); //這樣會報錯，因為document出來的是類似陣列但不是真正的陣列
+// let newDoms = [...doms];
+// console.log(newDoms, newDoms.concat())  //這樣不會報錯，因為把裡面的東西取出來在塞到正常的array裡面
+
 
 // #4 類陣列觀念說明
 // var originCash = 1000;
 // function updateEasyCard() {
-//   let arg = arguments
-//   // let sum = arg.reduce(function (accumulator, currentValue) {
-//   //   return accumulator + currentValue;
-//   // }, 0);
-//   // console.log('我有 ' + sum + ' 元');
+//   // let arg = arguments;
+//   let arg = [...arguments];
+//   console.log(arguments);
+//   let sum = arg.reduce(function (accumulator, currentValue) {
+//     return accumulator + currentValue;
+//   }, 0);
+//   console.log('我有 ' + sum + ' 元');
 // }
 // updateEasyCard(0); // 我有 1000 元
 // updateEasyCard(10, 50, 100, 50, 5, 1, 1, 1, 500); // 我有 718 元
 
 
 // #5 其餘參數
-// function moreMoney(...money) {
-//   // console.log(money);
-// }
-// moreMoney(100, 100, 100)
+function moreMoney(ming, ...money) {
+  console.log(ming, money);
+}
+moreMoney('小明', 100, 200, 300)
 </script> 
         </div>
       </div>
